# omni

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  TODO.txt  build.bat  gen_projects.bat  omni_config.h.in  vcpkg.json
examples/sandbox/: CMakeLists.txt  main.cpp
omni/: app.cpp  app.hpp  config.h  core.cpp  core.h  core.hpp  dx12_window.cpp  dx12_window.hpp  entry_point.hpp  error.hpp  logger.cpp  logger.hpp  math.hpp  omni.cpp  omni.hpp  rendering_layer.hpp  resource.h  resources.rc  target_platform_window.hpp  window.hpp  window_event.hpp  window_interface.hpp
omni/imgui/: imgui_demo_window.cpp  imgui_demo_window.hpp  imgui_impl.hpp
omni/platform/windows/: windows_window.cpp  windows_window.hpp
omni/random/: shuffle_bag.hpp
omni/utility/: delegate.hpp  delegate_base.hpp  function.hpp  multicast_delegate.hpp  types_pack.hpp  values_pack.hpp
omni/win/: graphics.cpp  graphics.hpp  incl_windows.h  window.cpp  window.hpp  window_event.hpp  window_resources.cpp  window_resources.hpp  windows.h  wnd.cpp  wnd.hpp  wnd_rscs.cpp  wnd_rscs.hpp
